<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/eTgetData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <Button
        android:id="@+id/bSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/eTgetData"
        android:text="@string/startactivity" />

    <Button
        android:id="@+id/bSAFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eTgetData"
        android:layout_toRightOf="@id/bSA"
        android:text="@string/startactivityforresult" />

    <TextView
        android:id="@+id/tvgetEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bSA"
        android:text="@string/textview" />

</RelativeLayout>